syntax = "proto3";

option go_package = "gitlab.ozon.dev/ivan.hom.200/telegram-bot/api;apiv1";

import "google/protobuf/wrappers.proto";

message SendMessageRequest {
    google.protobuf.StringValue message = 1;
}

message SendMessageResponse {
    google.protobuf.StringValue message = 1;
}

service Echo {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}
  